# rsomics-binned-statistic

./: Cargo.toml  README.md
benches/: binned.rs
src/: binned.rs  cli.rs  edges.rs  io.rs  lib.rs
tests/: compat.rs
tests/golden/: empty.tsv  expected.json  nan.tsv  small.tsv
