[package]
name = "rsomics-binned-statistic"
version = "0.1.1"
description = "Per-bin statistic of a second variable (mean/std/median/count/sum/min/max) — value-exact to scipy.stats.binned_statistic"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-binned-statistic"
authors = ["Zane Leong <efd@live.com>"]
categories = ["science", "command-line-utilities"]
keywords = ["statistics", "binning", "histogram", "binned-statistic", "scipy"]
readme = "README.md"

[[bin]]
name = "rsomics-binned-statistic"
path = "src/main.rs"

[lib]
name = "rsomics_binned_statistic"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = "0.6"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
fast-float2 = "0.2"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
serde_json = "1"

[[bench]]
name = "binned"
harness = false
